--- a/index.html
+++ b/index.html
@@ -50,22 +50,22 @@
     <fieldset>
       <div>
               <div><p>What roles can you play? (Click all that apply.)</p>
-              <input type="checkbox" id="Healer" name="source" value="Healer">
+              <input type="checkbox" id="Healer" name="Healer" value="Healer">
                 <label for="Healer">Healer</label></div>
               <div>
-                <input type="checkbox" id="Tank" name="source" value="Tank">
+                <input type="checkbox" id="Tank" name="Tank" value="Tank">
                 <label for="Tank">Tank</label>
               </div>
               <div>
-               <input type="checkbox" id="MeleeDPS" name="source" value="MeleeDPS">
+               <input type="checkbox" id="MeleeDPS" name="MeleeDPS" value="MeleeDPS">
                 <label for="MeleeDPS">Melee DPS</label>
               </div>
               <div>
-                <input type="checkbox" id="PhysicalRanged" name="source" value="PhysicalRanged">
+                <input type="checkbox" id="PhysicalRanged" name="PhysicalRanged" value="PhysicalRanged">
                 <label for="PhysicalRanged">Physical Ranged DPS</label>
               </div>
               <div>
-                <input type="checkbox" id="MagicRanged" name="source" value="MagicRanged">
+                <input type="checkbox" id="MagicRanged" name="MagicRanged" value="MagicRanged">
                 <label for="MagicRanged">Magic Ranged DPS</label>
               </div>
       </div></fieldset>
